--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="images/antonSerious.png" class="headshot">
         </div>
         <div id="im1-backside" class="imageDiv-back"> 
-          <img src="images/antonFunny.png" class="headshot">
+          <img src="images/antonFunny.jpg" class="headshot">
         </div>
       </div>
     <div id="cell2">
