--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
       <div class="tile Design">
         <div class="img_container">
-          <img class="img_not_hover" src="images/Funny Images/_4WechatIMG5 copy - Nicole Li.jpeg">
+          <img class="img_not_hover" src="images/Funny Images/nicolefunny.jpeg">
           <img class="img_hover" src="images/Serious Images/IMG_0913 copy - Nicole Li.jpg"> <br> <p>Nicole Li</p>
         </div>
       </div>
